Adding joyent http parser and logging

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,15 @@
 AUTOMAKE_OPTIONS = foreign subdir-objects
 ACLOCAL_AMFLAGS = -I build
 
-AM_CFLAGS = -Wall $(DEPS_CFLAGS)
+AM_CFLAGS = -Wall -g $(DEPS_CFLAGS)
 
 core_src :=
-core_src += src/httpd.c
+core_src += src/http_parser.c
+core_src += src/logger.c
+core_src += src/server.c
 
-httpd_SOURCES = $(core_src)
-bin_PROGRAMS = httpd
+shittyd_SOURCES = $(core_src)
+sbin_PROGRAMS   = shittyd
 
 clean-local:
 	git clean -xfd
