Configuration and Documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,27 @@ autom4te.cache/
 aclocal.m4
 shittyd
 shittyd-*.tar.*
-src/shittyd
+
 config.h*
 config.log
 config.status
 configure
+
 src/*.o
 src/.deps
 src/.dirstamp
+src/shittyd
+
+man/*.1
+man/*.2
+man/*.3
+man/*.4
+man/*.5
+man/*.6
+man/*.7
+man/*.8
+man/*.9
+
 stamp-h1
 Makefile
 Makefile.in
