--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,7 @@
 
 
 AC_PREREQ(2.63)
-AC_INIT([shittyd], [0.0.1], [bugs@danmolik.com], , [https://github.com/GrayTShirt/Shitty-Little-Server/])
+AC_INIT([shittyd], [0.1.0], [bugs@danmolik.com], , [https://github.com/GrayTShirt/Shitty-Little-Server/])
 
 AC_CONFIG_SRCDIR([src/server.h])
 AC_CONFIG_AUX_DIR([build])
@@ -29,13 +29,15 @@ AC_CONFIG_HEADERS(config.h)
 AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
 
 AC_PROG_CC
+AC_PROG_YACC
+AC_PROG_LEX
+AC_PROG_INSTALL
 
 AC_HAVE_LIBRARY(pthread,,     AC_MSG_ERROR(Missing pthread library))
 AC_HAVE_LIBRARY(z,,           AC_MSG_ERROR(Missing zlib library))
 AC_HAVE_LIBRARY(http_parser,, AC_MSG_ERROR(Missing Joyent HTTP parser library))
 
 AC_C_INLINE
-AC_PROG_INSTALL
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
